--- a/package.json
+++ b/package.json
@@ -1,10 +1,50 @@
 {
+  "name": "data_register",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "abort-controller": "^3.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
     "cheerio": "^0.20.0",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1",
+    "fetch-node": "^0.0.1",
+    "fetch-retry": "^4.1.1",
+    "jssoup": "^0.0.12",
+    "npm-run-all": "^4.1.5",
     "puppeteer": "^10.2.0",
-    "scrape-it": "^5.3.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.38.1",
+    "scrape-it": "^5.3.1",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "scrap": "node src/hooks/scrapCNE.js",
+    "deploy":"run-p -c start scrap"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
